refactor(project): сделал чистку проекта
