# backend/src/middleware/validator/schemas/SchemasEducationGroup.ts
@@ -1,0 +1,13 @@
+import * as z from "zod/v4";
+
+export const SchemasCreateEducationGroup = z.object({
+    tgUsername: z.string('Tg name начинается с @').regex(/^@/),
+    name: z.string('У группы должно быть название'),
+    description: z.optional(z.string('Это строка')),
+    urlName: z.optional(z.string('Это строка формата https://t.me/названиеГруппы или t.me/названиеГруппы')),
+});
+
+export const SchemasAddChildrens = z.object({
+    uuidGroup: z.uuid(),
+    childrens: z.array(z.string().regex(/^@/)),
+})
